fix broken code blocks on mobile

--- a/public/css/css.css
+++ b/public/css/css.css
@@ -95,3 +95,9 @@ form {
     border-style: solid;
     padding: 1rem;
 }
+
+code {
+    white-space: pre;
+    word-break: normal;
+    word-wrap: normal;
+}
